// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with all info 1`] = `
<div
  className="detail"
>
  <div
    className="header"
  >
    <div>
      <h1
        className="title"
      >
        Something
      </h1>
    </div>
    <span
      className="close"
      onClick={[Function]}
    >
      ×
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="gallery"
    >
      <a
        href="/google/random.jpg"
      >
        <img
          alt="Random photo I found on Google"
          src="/google/random.jpg"
        />
      </a>
      <a
        href="/google/funny.jpg"
      >
        <img
          alt="Funny image from Google"
          src="/google/funny.jpg"
        />
      </a>
    </div>
    <div
      className="content"
    >
      <h2>
        Description
      </h2>
      <div
        className="typography"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
      <div
        className="skills"
      >
        <span
          className="skill"
        >
          all
        </span>
        <span
          className="skill"
        >
          right
        </span>
        <span
          className="skill"
        >
          skills
        </span>
      </div>
      <div
        className="bottom"
      >
        <a
          className="link button button-outline"
          href="https://google.com"
        >
          My weekend project
        </a>
        <div
          className="period"
        >
          2222
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders without photos, skills and period 1`] = `
<div
  className="detail"
>
  <div
    className="header"
  >
    <div>
      <h1
        className="title"
      >
        Something
      </h1>
    </div>
    <span
      className="close"
      onClick={[Function]}
    >
      ×
    </span>
  </div>
  <div
    className="body"
  >
    <div
      className="gallery"
    />
    <div
      className="content"
    >
      <h2>
        Description
      </h2>
      <div
        className="typography"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
      <div
        className="bottom"
      >
        <a
          className="link button button-outline"
          href="https://google.com"
        >
          My weekend project
        </a>
      </div>
    </div>
  </div>
</div>
`;
